--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -1,48 +1,3 @@
-.logout-btn {
-    height: fit-content;
-    margin-left: 10px;
-}
-
-.index {
-    margin-top: 20px;
-}
-
-.add-btn {
-    width: 100px;
-}
-
-.show-cont {
-    width: 500px;
-    margin: 0 auto;
-    padding: 10px;
-}
-
-.show-title-cont {
-    display: flex;
-    justify-content: space-between;
-}
-
-.desc-title {
-    margin-bottom: 0;
-}
-
-.desc {
-    max-width: 400px;
-    margin-left: 20PX;
-}
-
-.table {
-    text-align: center;
-}
-
-thead {
-    background-color: darkgray;
-}
-
-.add-new-btn {
-    float: right;
-}
-
 .register-cont {
     width: 700px;
 }
@@ -62,3 +17,8 @@ thead {
 .vertical-align {
     margin: auto 0;
 }
+
+.main-info {
+    width: 65%;
+}
+
