--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -17,7 +17,7 @@
                     {% if not active_user %}
                         <a href="/login" class="navbar-brand">Welcome! Click here to Login and Register</a>
                     {% else %}
-                        <a class="navbar-brand" href="/profile/{{active_user.first_name}}{{active_user.last_name}}/{{active_user.id}}">Welcome {{ active_user.first_name }}!</a>
+                        <a class="navbar-brand">Welcome {{ active_user.first_name }}!</a>
                         <a class="btn btn-outline-success" href="/logout">Logout</a>
                     {% endif %}
                 </div>
@@ -59,11 +59,21 @@
             </ul>
         </div>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d72616190.1580073!2d-6.720863044115774!3d29.98748425599208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1642275993786!5m2!1sen!2sus" width="1200" height="750" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d32665292.10780559!2d73.18875939590718!3d10.761385896325729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1642275799500!5m2!1sen!2sus" width="1200" height="750" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
-        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d57098608.30405841!2d3.3883502946574966!3d29.134527380139545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1642272861576!5m2!1sen!2sus" width="1200" height="750" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
-    </div>
+    <main>
+        <div class="container-sm d-flex justify-content-center">
+            <div class="main-info row justify-content-md-center">
+                <div class="profile-pic col-4 text-center">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcMrqyW43W_KoTq_nsfBnwuPn0FXvcTe2Kgw&usqp=CAU" alt="profile picture">
+                    <a href="">Upload/Change</a>
+                </div>
+                <div class="personal-info col-5">
+                    <h4>Name: {{active_user.first_name}} {{active_user.last_name}}</h4>
+                    <p>Email: {{active_user.email}}</p>
+                    <a href="">Edit</a>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
