added all countries route and template

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -54,7 +54,7 @@
                     <a class="nav-link" href="#">Antarctica</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">All Countries</a>
+                    <a class="nav-link" href="/all/countries">All Countries</a>
                 </li>
             </ul>
         </div>
