--- a/flask_app/templates/all_countries.html
+++ b/flask_app/templates/all_countries.html
@@ -17,7 +17,7 @@
                     {% if not active_user %}
                         <a href="/login" class="navbar-brand">Welcome! Click here to Login and Register</a>
                     {% else %}
-                        <a class="navbar-brand">Welcome {{ active_user.first_name }}!</a>
+                        <a class="navbar-brand" href="/profile/{{active_user.first_name}}{{active_user.last_name}}/{{active_user.id}}">Welcome {{ active_user.first_name }}!</a>
                         <a class="btn btn-outline-success" href="/logout">Logout</a>
                     {% endif %}
                 </div>
@@ -59,20 +59,25 @@
             </ul>
         </div>
     </div>
-    <main class="mt-5">
-        <div class="container-sm d-flex justify-content-center">
-            <div class="main-info row justify-content-md-center">
-                <div class="profile-pic col-4 text-center">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcMrqyW43W_KoTq_nsfBnwuPn0FXvcTe2Kgw&usqp=CAU" alt="profile picture">
-                    <a href="">Upload/Change</a>
-                </div>
-                <div class="personal-info col-5">
-                    <h4>Name: {{active_user.first_name}} {{active_user.last_name}}</h4>
-                    <p>Email: {{active_user.email}}</p>
-                    <a href="/edit/profile">Edit</a>
+    <main>
+        {% for index in range(0, countries|length, 2) %}
+            <div class="cotainer">
+                <div class="row">
+                    <div class="col one_country text-center">
+                        <img src="https://flagcdn.com/w160/{{ countries[index].code2.lower() }}.png" alt="{{ countries[index].name }}">
+                        <h5>{{ countries[index].name }} ({{ countries[index].code }})</h5>
+                        <p>{{ countries[index].capital.name }}</p>
+                        <p>{{ countries[index].continent }}</p>
+                    </div>
+                    <div class="col one_country text-center">
+                        <img src="https://flagcdn.com/w160/{{ countries[index+1].code2.lower() }}.png" alt="{{ countries[index+1].name }}">
+                        <h5>{{ countries[index+1].name }} ({{ countries[index+1].code }})</h5>
+                        <p>{{ countries[index+1].capital.name }}</p>
+                        {{ countries[index+1].continent }}
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endfor %}
     </main>
 
     <!-- Optional JavaScript; choose one of the two! -->
