--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script defer type="text/javascript" src="{{ url_for('static', filename='js/my_script.js') }}"></script>
     <title>Welcome!</title>
 </head>
 <body>
@@ -33,25 +34,25 @@
                     <a class="nav-link" href="\">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Europe</a>
+                    <a class="nav-link" href="/europe">Europe</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Asia</a>
+                    <a class="nav-link" href="/asia">Asia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Africa</a>
+                    <a class="nav-link" href="/africa">Africa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">North America</a>
+                    <a class="nav-link" href="/north-america">North America</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">South America</a>
+                    <a class="nav-link" href="/south-america">South America</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Oceania</a>
+                    <a class="nav-link" href="/oceania">Oceania</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Antarctica</a>
+                    <a class="nav-link" href="/antarctica">Antarctica</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/all/countries">All Countries</a>
@@ -59,6 +60,7 @@
             </ul>
         </div>
     </div>
+
     <div class="container-fluid d-flex justify-content-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d72616190.1580073!2d-6.720863044115774!3d29.98748425599208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1642275993786!5m2!1sen!2sus" width="1200" height="750" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d32665292.10780559!2d73.18875939590718!3d10.761385896325729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1642275799500!5m2!1sen!2sus" width="1200" height="750" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
