--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script defer type="text/javascript" src="{{ url_for('static', filename='js/my_script.js') }}"></script>
     <title>Welcome!</title>
 </head>
 <body>
@@ -33,25 +34,25 @@
                     <a class="nav-link" href="\">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Europe</a>
+                    <a class="nav-link" href="/europe">Europe</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Asia</a>
+                    <a class="nav-link" href="/asia">Asia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Africa</a>
+                    <a class="nav-link" href="/africa">Africa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">North America</a>
+                    <a class="nav-link" href="/north-america">North America</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">South America</a>
+                    <a class="nav-link" href="/south-america">South America</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Oceania</a>
+                    <a class="nav-link" href="/oceania">Oceania</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Antarctica</a>
+                    <a class="nav-link" href="/antarctica">Antarctica</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/all/countries">All Countries</a>
@@ -69,7 +70,7 @@
                 <div class="personal-info col-5">
                     <h4>Name: {{active_user.first_name}} {{active_user.last_name}}</h4>
                     <p>Email: {{active_user.email}}</p>
-                    <a href="/edit/profile">Edit</a>
+                    <a href="/edit/profile">Edit Profile</a> <a href="">Change Password</a>
                 </div>
             </div>
         </div>
