--- a/flask_app/templates/update_profile.html
+++ b/flask_app/templates/update_profile.html
@@ -7,7 +7,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <script defer type="text/javascript" src="{{ url_for('static', filename='js/my_script.js') }}"></script>
     <title>Register</title>
 </head>
 <body>
@@ -32,22 +31,13 @@
                     <input name="email" type="email" class="form-control">
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">* Password:</label>
-                    <p>{{ get_flashed_messages(category_filter=["registration-error"])[3] }}</p>
-                    <input name="password" type="password" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label for="password-conf" class="form-label">* Confirm Password:</label>
-                    <input name="password-conf" type="password" class="form-control">
-                </div>
-                <div class="mb-3">
                     <label for="info" class="form-label">Tell Us About Yourself:</label>
                     <textarea class="form-control" name="info" id="" cols="30" rows="5"></textarea>
                 </div>
-                <div class="text-center"><button type="submit" class="register-btn btn btn-primary">Register</button></div>
+                <div class="text-center"><button type="submit" class="register-btn btn btn-primary">Update</button></div>
             </form>
             <div class="text-center mt-3">
-                <a class="me-2" href="/login">Login</a>
+                <a class="me-2" href="/login">Profile</a>
                 <a class="ms-2" href="/">Home</a>
             </div>
         </div>
