--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -34,28 +34,28 @@
                     <a class="nav-link" href="\">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/europe">Europe</a>
+                    <a class="nav-link" href="/continent/europe">Europe</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/asia">Asia</a>
+                    <a class="nav-link" href="/continent/asia">Asia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/africa">Africa</a>
+                    <a class="nav-link" href="/continent/africa">Africa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/north-america">North America</a>
+                    <a class="nav-link" href="/continent/north-america">North America</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/south-america">South America</a>
+                    <a class="nav-link" href="/continent/south-america">South America</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/oceania">Oceania</a>
+                    <a class="nav-link" href="/continent/oceania">Oceania</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/antarctica">Antarctica</a>
+                    <a class="nav-link" href="/continent/antarctica">Antarctica</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/all/countries">All Countries</a>
+                    <a class="nav-link" href="/allcountries">All Countries</a>
                 </li>
             </ul>
         </div>
