--- a/flask_app/templates/update_profile.html
+++ b/flask_app/templates/update_profile.html
@@ -37,7 +37,7 @@
                 <div class="text-center"><button type="submit" class="register-btn btn btn-primary">Update</button></div>
             </form>
             <div class="text-center mt-3">
-                <a class="me-2" href="/login">Profile</a>
+                <a class="me-2" href="/profile/{{active_user.first_name}}{{active_user.last_name}}/{{active_user.id}}">Profile</a>
                 <a class="ms-2" href="/">Home</a>
             </div>
         </div>
