--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -70,7 +70,7 @@
                 <div class="personal-info col-5">
                     <h4>Name: {{active_user.first_name}} {{active_user.last_name}}</h4>
                     <p>Email: {{active_user.email}}</p>
-                    <a href="/edit/profile">Edit Profile</a> <a href="">Change Password</a>
+                    <a href="/edit/profile">Edit Profile</a> <a href="/change/password">Change Password</a>
                 </div>
             </div>
         </div>
