--- a/flask_app/templates/change_password.html
+++ b/flask_app/templates/change_password.html
@@ -7,34 +7,31 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Update Profile</title>
+    <title>Change Password</title>
 </head>
 <body>
 
-    <div class="register-cont index container overflow-hidden">
-        <div class="registration-cont p-3 border bg-light">
-            
-            <form action="/update/user/{{active_user.id}}" method="post">
+    <div class="pass-cont index container overflow-hidden">
+        <div class="p-3 border bg-light">
+            <form class="login-form" action="/changing/password" method="post">
+                {% with messages = get_flashed_messages(category_filter=["password-error"]) %}
+                    {% if messages %}
+                        <p>{{ messages[0] }}</p>
+                    {% endif %}
+                {% endwith %}
                 <div class="mb-3">
-                    <label for="first_name" class="form-label">* First Name:</label>
-                    <p>{{ get_flashed_messages(category_filter=["registration-error"])[0] }}</p>
-                    <input name="first_name" type="text" class="form-control" value="{{active_user.first_name}}">
+                    <label for="old_password" class="form-label">Old Password:</label>
+                    <input name="old_password" type="password" class="form-control">
                 </div>
                 <div class="mb-3">
-                    <label for="last_name" class="form-label">* Last Name:</label>
-                    <p>{{ get_flashed_messages(category_filter=["registration-error"])[1] }}</p>
-                    <input name="last_name" type="text" class="form-control" value="{{active_user.last_name}}">
+                    <label for="new_password" class="form-label">New Password:</label>
+                    <input name="new_password" type="password" class="form-control">
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">* Email address:</label>
-                    {{ get_flashed_messages(category_filter=["registration-error"])[2] }}
-                    <input name="email" type="email" class="form-control" value="{{active_user.email}}">
+                    <label for="conf_new_password" class="form-label">Confirm New Password:</label>
+                    <input name="conf_new_password" type="password" class="form-control">
                 </div>
-                <div class="mb-3">
-                    <label for="info" class="form-label">Tell Us About Yourself:</label>
-                    <textarea class="form-control" name="info" id="" cols="30" rows="5">{{active_user.info}}</textarea>
-                </div>
-                <div class="text-center"><button type="submit" class="register-btn btn btn-primary">Update</button></div>
+                <div class="text-center"><button type="submit" class="pass-btn btn btn-primary">Change Password</button></div>
             </form>
             <div class="text-center mt-3">
                 <a class="me-2" href="/profile/{{active_user.first_name}}{{active_user.last_name}}/{{active_user.id}}">Profile</a>
