--- a/flask_app/templates/one_country.html
+++ b/flask_app/templates/one_country.html
@@ -22,9 +22,9 @@
                         <a class="btn btn-outline-success" href="/logout">Logout</a>
                     {% endif %}
                 </div>
-                <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="d-flex" action="/search" method="post">
+                    <input name="search_term" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
         </nav>
