--- a/flask_app/templates/one_country.html
+++ b/flask_app/templates/one_country.html
@@ -16,7 +16,7 @@
             <div class="container-fluid">
                 <div>
                     {% if not active_user %}
-                        <a href="/login" class="navbar-brand">Welcome! Click here to Login and Register</a>
+                        <a href="/login" class="navbar-brand">Welcome! Click here to Login or Register</a>
                     {% else %}
                         <a class="navbar-brand" href="/profile/{{active_user.first_name}}{{active_user.last_name}}/{{active_user.id}}">Welcome {{ active_user.first_name }}!</a>
                         <a class="btn btn-outline-success" href="/logout">Logout</a>
@@ -77,7 +77,7 @@
                 style="border:0"
                 loading="lazy"
                 allowfullscreen
-                src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCHrfB3OPyVs-AsRWUyuqbcpruopOmVRK4&q={{country.name.lower()}}&zoom=6">
+                src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCHrfB3OPyVs-AsRWUyuqbcpruopOmVRK4&q={{country.name.lower()}}&zoom=5">
             </iframe>
         </div>
     </main>
