--- a/flask_app/templates/one_continent.html
+++ b/flask_app/templates/one_continent.html
@@ -10,8 +10,8 @@
     <script defer type="text/javascript" src="{{ url_for('static', filename='js/my_script.js') }}"></script>
     <title>Welcome!</title>
 </head>
-<body>
-    <div class="navigation fixed-top">
+<body class="b-display">
+    <div class="navigation sticky-top">
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <div>
