--- a/flask_app/templates/one_country.html
+++ b/flask_app/templates/one_country.html
@@ -11,7 +11,7 @@
     <title>Welcome!</title>
 </head>
 <body>
-    <div class="navigation fixed-top">
+    <div class="navigation sticky-top">
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <div>
